Report via email on Safari - FIXED

--- a/app/styles/_news.sass
+++ b/app/styles/_news.sass
@@ -57,6 +57,10 @@
     font-size: $fs-normal + 0.2
     line-height: $fs-normal + 0.6
     color: $text-other
+    a
+      background: none
+      &:hover
+        background: none
 
 .read-more
   text-align: center
